crates/runhaven-tui/src/tui/snapshots/runhaven_mvp_review_80x24.snap
---
source: crates/runhaven-tui/src/tui/runhaven/mvp_snapshots.rs
expression: rendered
---

  RunHaven v0.5.0  Step 3/4: Review plan
  Check what RunHaven will share before launch.

  Agent       antigravity
  Status      ready
  Auth scope  agent
  Network     provider allowlist
  Boundary    /workspace only
  Host home   not mounted
  Credentials not mounted by default
  Workspace   /selected-workspace
  Mount       /selected-workspace -> /workspace
  State       runhaven-antigravity-shared-home
  Image       runhaven/antigravity:0.1.0
  Worktree    off

  Exact command
  container run --rm --init --name runhaven-antigravity-snapshot-run
  --read-only --mount type=bind,source=/selected-workspace,target=/workspace
  --network runhaven-provider runhaven/antigravity:0.1.0 antigravity

  Not shared
