crates/runhaven-tui/src/tui/snapshots/runhaven_mvp_run_control_stop_80x24.snap
---
source: crates/runhaven-tui/src/tui/runhaven/mvp_snapshots.rs
expression: rendered
---

  RunHaven v0.5.0  Stop run
  1 Launch  2 Runs  3 Diagnostics  h History
  This action only targets the selected RunHaven-owned container.

  Run ID      run-20260629-001
  Profile     codex
  Container   runhaven-codex-001-run
  Status      running

  Stop asks the container to exit cleanly. Work inside the agent may stop.
  Type stop, then press Enter.
  Typed
