crates/runhaven-tui/src/tui/snapshots/runhaven_mvp_run_diff_confirmation_120x48.snap
---
source: crates/runhaven-tui/src/tui/runhaven/mvp_snapshots.rs
expression: rendered
---

  RunHaven v0.5.0  Run review
  Run ID  run-20260629-002  Profile  codex
  Git         Git: changed=true before=1234567 after=89abcde files=3
  Fallback    runhaven runs show run-20260629-002

  The diff can show workspace file contents.
  Type diff, then press Enter to load a bounded preview.
  Typed
