crates/runhaven-tui/src/tui/snapshots/runhaven_mvp_workspace_picker_repo_root_80x24.snap
---
source: crates/runhaven-tui/src/tui/runhaven/mvp_snapshots.rs
expression: rendered
---

  RunHaven v0.5.0  Step 1/4: Choose workspace
  Safety    /workspace only. Host home not mounted.
  Credentials not mounted by default
  Selected    Git repository root
  Workspace   /selected-workspace

  1. Current directory    /selected-workspace/app
› 2. Git repository root  1 agents available for this workspace

  Workspace Preview
  Choice      Git repository root
  Workspace   /selected-workspace
  Mount       /workspace only
  Host home   not mounted
  Credentials not mounted by default
  Agents      1

  Mount the full repository instead of only the nested folder.



  Choose what RunHaven mounts as /workspace before reviewing an agent.
  Use ↑/↓ or j/k to choose. enter selects. esc or q quits.
